--- a/content/living/marriage-divorce.mdx
+++ b/content/living/marriage-divorce.mdx
@@ -42,9 +42,29 @@ In case of submitting the application on state registration of marriage through 
 **Property Rights**: All property acquired after marriage belongs to both spouses unless otherwise specified in a signed contract. Personal property acquired before marriage is treated separately.
 </Note>
 
+### Invalid Marriages
+
+A marriage may be considered invalid when:
+
+*   The couple is under the age of 18 and there is no consent by the parents.
+*   One partner is 16, but the other is over 18, despite having parental consent.
+*   One spouse is already married (polygamy).
+*   The spouses are immediate or adopted close relatives.
+*   Either of the spouses is recognized as invalid by the court and unable to make decisions.
+*   Either of the spouses have concealed STDs or drug/other toxic addictions.
+*   It's discovered that one of the spouses shows no intention to make a family (false marriage).
+
+<Note>
+**Equal Rights for Non-Citizens**: The Armenian constitution prevents discrimination. As such, non-citizens are provided the same rights and obligations as locals in divorce proceedings.
+</Note>
+
 ## Divorce
 
 The end of a marriage can be quite painful, and not all parties will always agree to it. In Armenia, so long as both consent to the act, their divorce is carried out in the body of the civil status acts registration. Should one of the parties be declared missing or having no legal capacity, as well as incarcerated for over three years' time, the divorce may go through on one application. Furthermore, if one of the spouses is unable to make it, his or her signature on the application must be notarized to be accepted by the courts. It would be carried out by the courts in general, should there not be consent from one spouse or he/she doesn't follow through, or both wish to take it to court. If it is through this method, then the divorce is finalized upon judgement. In both cases, the divorce will be registered officially.
+
+<Note>
+**No Legal Separation**: There is no legal "separation" within Armenian society. There is also no such thing as "cohabitation rights" from which to release a couple. Divorce is the only legal means to dissolve a marriage.
+</Note>
 
 Divorce can be processed through the **Civil Registry Office** or the **Courts**.
 
@@ -61,7 +81,10 @@ Possible if:
     - At the Civil Registry Office for the registration of marriages.
 3.  **Temporary Residence**: The registration of a divorce between citizens residing without a permanent registration is carried out by the body of the civil status acts registration of the place of temporary residence of the citizen getting divorced. In that case, the citizen must submit a reference from the place of temporary residence issued by the competent authorities.
 4.  **Timeline**: Divorce is official between 1-3 months later. They may withdraw their application at any given point before it is registered as divorce.
-5.  **Cost**: 10,000 AMD state duty.
+5.  **Fees**:
+    *   **Standard fee**: 10,000 AMD state duty for state registration of a divorce, including issuance of a certificate.
+    *   **Expedited fee**: Additional 100,000 AMD for state registration of a divorce on the day designated by persons in the process of divorce.
+    *   **Surname reversion**: Additional 5,000 AMD state duty if parties wish to revert to premarital surnames.
 
 <Note>
 **Pregnancy Restriction**: The husband does not have the right to submit an application for divorce during the pregnancy of the wife, without the consent of the wife.
@@ -72,13 +95,22 @@ Required if:
 *   One spouse does not consent.
 *   There are disputes over custody or property.
 
-**Note**: Armenian courts have jurisdiction over divorces of Armenian citizens, even if the marriage occurred abroad.
+**Note**: Armenian courts have jurisdiction over all divorces of Armenian citizens, even if the marriage occurred abroad. Even if only one of the partners is a citizen, the proceedings would take place in Armenia. Consular verification/apostilles are necessary for divorces conducted outside Armenia to be recognized within the country.
 
 <Note>
 **Court Proceedings**: In court proceedings, divorce comes into effect the day judgment is served. The court may call for a three-month period of reconciliation. Rulings are generally in favor of the children (under 18).
 
 In court cases, divorce is possible through letter of attorney/representative.
 </Note>
+
+### Court Decisions on Financial and Non-Financial Claims
+
+The courts will decide on the following matters:
+
+*   **Alimony**
+*   **Child custody**
+*   **Property distribution**
+*   **Spousal support**
 
 **After Divorce**: Spouses may keep their current surnames or change back to premarital surnames.
 
