--- a/content/move/legal-status.mdx
+++ b/content/move/legal-status.mdx
@@ -5,11 +5,18 @@ description: Residency permits and citizenship in Armenia
 
 # Legal Status in Armenia
 
-Foreign citizens in Armenia have many rights and obligations. You may work (with a permit), own a business, and rent or own property. You are expected to pay taxes and follow the constitution. However, you cannot vote, be elected, or own agricultural land (with some exceptions).
+As a foreign citizen in Armenia, there are many things you are entitled to, and many things expected of you. You may work in Armenia (provided you have a work permit, which leads to temporary residency), own a business, and rent or own property. You are expected to pay taxes, state duties, and any other payments specified by law, while respecting and following the country's constitution and regulations.
+
+However, you may not:
+- Enter the country without a visa (unless otherwise specified by law)
+- Vote or be elected to state bodies
+- Work in public services
+- Own agricultural land
+- Create or become a member of a local political party
 
 ## Types of Residence Permits
 
-There are three main types of residency status:
+There are three main types of residency status: Temporary, Permanent, and Special. Foreigners who wish to obtain residency could qualify for either, depending on their circumstances. If you are not of Armenian descent, the best paths are typically through education, business, or investment.
 
 | Type | Duration | Cost | Notes |
 | :--- | :--- | :--- | :--- |
@@ -27,20 +34,111 @@ There are three main types of residency status:
     *   *Permanent*: Close relative with residency/citizenship, business, or 3+ years residence.
 *   **Receipt**: Proof of payment.
 
-**Processing Time**: Decisions are made by the Migration and Citizenship Service within 30 days. Renewals should be submitted 30 days before expiration.
+**Processing Time**: The decision about granting temporary or permanent residency is made by the Migration and Citizenship Service of Armenia, jointly with the National Security Services, within 30 days. A notice will be sent to the applicant. Once granted, the holder has the right to live in Armenia, as well as exit and enter the country. A renewal should be applied for 30 days before the expiration date.
+
+<Note>You should book an appointment for applying for any type of residence permit on the [Migration and Citizenship Service website](https://migration.e-gov.am/en/).</Note>
+
+### Family Residency Permits
+
+Families of Armenian citizens and residents may receive permits based on the sponsor's current status:
+
+- **Temporary status holders** may apply for residency permits for their spouse, parent, or child.
+- **Permanent residents** may apply for spouse, parent, child, siblings, grandparents, or grandchildren to receive temporary residency.
+- **Special residents and citizens** may apply for spouse, parents, children, siblings, grandparents, and grandchildren, with permanent residency options available after three years.
 
 ## Special Residency (for Armenians)
-Issued to foreign citizens of Armenian ancestry.
-*   **Benefits**: 10-year validity, visa-free travel to Armenia, full protection of law, exempt from military service.
-*   **Proof of Ethnicity**: Baptism certificate, birth certificate of parent/grandparent with ethnicity note, or other official documents.
+
+As of 1994, Armenia issues a special residency passport (88x125mm, 12 page) to foreign citizens of Armenian ancestry. It is for a 10-year period and exempts the bearer from visa costs when travelling to Armenia. It provides full protection by the law and all rights and obligations of Armenian citizens, as well as most benefits, with the exception of the right to vote or run for office. Furthermore, those with the special residency passport are exempt from military service.
+
+### Application Process
+
+To apply, you will need to submit the necessary documentation to either an embassy or consulate when outside Armenia, or through the Passport and Visa Department (aka OVIR). The processing time can take between 3 and 6 months, though it has been known to take up to 9 in some cases. Renewal applications should be made 30 days before the expiration date.
+
+<Note>You should book an appointment for applying for any type of residence permit on the [Migration and Citizenship Service website](https://migration.e-gov.am/en/).</Note>
+
+<Note>Those over the age of 16 can apply for special residency. The children of special residents who are under 16 may receive special residency for free.</Note>
+
+### Required Documents for Special Residency
+
+1. Application addressed to the head of Passport and Visas department of the Police of the RA
+2. Application-questionnaire and a copy of it (3 copies)
+3. Documents confirming the legality of residence in the territory of the Republic of Armenia (entry visa, residence card, passport of special residence of the RA and the note on entering the RA made by the border control service in the identity document) - 4 copies
+4. One of the documents confirming Armenian ethnicity (4 copies):
+   - **a.** Baptism certificate issued by churches, attested by the embassy or consulate with a note that the baptized person or his/her parent is an ethnic Armenian
+   - **b.** A document confirming Armenian ethnicity issued by the competent authorities of a foreign state and certified by an Apostille or attested by the consulate
+   - **c.** Another document substantiating Armenian ethnicity attested by the embassy or consulate
+   - **d.** Birth certificate of a parent (grandfather, grandmother, sister or brother) or other identity document with a note of Armenian ethnicity. The birth certificate or other identity document of a sister or brother establishing nationality can be a document confirming nationality if brother's or sister's Armenian nationality is conditioned by the nationality of their joint parent
+   - **e.** Along with the documents mentioned in paragraph "d" of this sub-clause, is also submitted a document substantiating the kinship of the person issued by the competent state bodies
+   
+   <Note>A passport or birth certificate containing a note on Armenian ethnicity are also documents confirming Armenian ethnicity. Documents must be apostilled or have consular authentication. Refer to the list of churches (Annex 4 of Government Decisions) issuing baptism documents which confirm Armenian national origin.</Note>
+
+5. Passport and travel documents, notarized and translated into Armenian and copies of these documents (3 copies)
+6. 6 color photos - 35 x 45 mm
+7. Receipt certifying payment of the state duty
+
+## Residency for Non-Armenians
+
+Yes, you can apply for both 1 year and 5 year residency. Normally, these are granted based on your circumstances, as mentioned above. The 1-year is temporary, while the 5-year is considered permanent. You become eligible for citizenship three years after your initial issuance. 
+
+Foreign citizens enrolled in an Armenian school or university are issued a temporary residence permit. Employees with a signed employment agreement are also eligible for a temporary residency. You are not allowed to work without a permit and it may result in both penalties and visa revocation.
 
 ## Citizenship
-Any person 18+ can apply. Dual citizenship is allowed.
 
-### Requirements
-*   **Residency**: 3 years of residence (or marriage to a citizen).
-*   **Language**: Knowledge of Armenian (Constitution test required).
-*   **Ethnicity**: Armenians by descent can apply without residency or language requirements.
+Any person 18+ can apply for Armenian citizenship. Dual citizenship is allowed. Terms of acquiring or terminating citizenship are settled upon the Law of the Republic of Armenia on "Citizenship of the Republic of Armenia" and Governmental Decision N 1390-N (November 23, 2007). 
+
+Citizenship is granted by decree of the President of the Republic of Armenia. Armenian citizenship can be awarded without requirements to persons who have provided exceptional service to the Republic of Armenia.
+
+**Important:** You cannot buy Armenian citizenship through investment programs, unlike in many other countries.
+
+### Benefits of Armenian Passport
+
+After three years of residence in Armenia, or if you are of Armenian descent, you may apply for citizenship, thus becoming eligible for a travel passport. Ranked 66th in the world, the Armenian passport allows for visa-free travel to 80 countries, including Russia, most of the CIS, and Iran. You are allowed dual citizenship and need not renounce your original one.
+
+### Benefits of Residency
+
+Residency alone gives you the right to do business, work, study, or simply retire in Armenia. Residents may also invite foreigners. Though a citizen must serve in the military, residents alone are not obligated.
+
+### Eligibility Requirements
+
+Requirements vary based on your application basis:
+
+| Basis | Residency Requirement | Armenian Language | Constitution Test |
+| :--- | :--- | :--- | :--- |
+| **Ethnicity** | Not required | Not required | Not required |
+| **Marriage** | 365 days in the last 2 years (unless you have a common child) | Not required | Required |
+| **Residency** | 3 years | Required | Required |
+| **Exception** | Not required | Not required | Not required |
+
+### Required Documents for Citizenship
+
+The complete list is determined by Government Decree N 1390-N (November 23, 2007). You must submit:
+
+*   Application form
+*   Passport and its copy, translated by a notary
+*   6 color photographs (35x45 mm)
+*   Birth certificate and its copy, translated by a notary
+*   Marriage certificate and its copy, notary translated (if applying based on spousal citizenship)
+*   Passport of the spouse and its copy or reference of citizenship, translated by a notary (if applying based on spousal citizenship)
+*   Birth certificate of child and its copy; or certificate of citizenship of RA and its copy; or passport of RA and its copy (if applicable)
+*   Proof of Armenian nationality (see below)
+*   Residency document of non-citizens and its copy, or travel documents and documents of residency in RA and their corresponding copies
+*   Proof of payment of state fees (1,000 AMD)
+
+**Note:** Persons of Armenian ethnicity from a country of origin in a state of war are exempt from the payment of the state duty.
+
+### Proof of Armenian Nationality for Citizenship
+
+One of the following documents, verified by legal entities in your country of citizenship:
+
+*   **Baptism certificate** from religious institutions with a note of Armenian nationality of the applicant or their parent
+    *   If you don't have a certificate, your church may be able to confirm your Armenian nationality, certified by the embassy in your country of citizenship (must be attested/apostilled)
+    *   Refer to the list of churches (Annex 4 of Government Decisions) issuing baptism documents which confirm Armenian national origin
+*   **Birth certificate** or other identification of a parent, grandparent, sister, or brother with a note of Armenian nationality
+    *   Birth certificates of siblings from common parents may be accepted if their nationality is due to common parents
+    *   Must include supporting document of relation issued by competent state authorities
+    *   Passports, birth certificates, certificates of residence, travel documents, or residency documents for non-citizens in RA are also considered supporting documents if they state Armenian nationality
+*   **Document stating Armenian nationality** given by competent authorities of the foreign country, apostilled or with consular authentication
+*   **Other supporting documentation** of Armenian nationality, authenticated
 
 ### Fees
 *   Application: 1,000 AMD
@@ -48,12 +146,136 @@ Any person 18+ can apply. Dual citizenship is allowed.
 *   Passport (Biometric): 25,000 AMD
 *   ID Card: 3,000 AMD
 
+### Passport Fees Outside Armenia
+If you live outside Armenia, fees at diplomatic representations/consular offices are:
+*   Biometric passport: 65,000 AMD
+*   Biometric passport (under 16): 30,000 AMD
+*   Regular passport for foreign countries: 65,000 AMD
+*   Regular passport (under 16): 30,000 AMD
+*   Extension up to 2 years: 10,000 AMD
+*   Extension over 2 years: 20,000 AMD
+
+### Fast-Track Issuance
+Expedited passport or ID card processing:
+*   One business day: 20,000 AMD
+*   Two business days: 10,000 AMD
+*   Three business days: 5,000 AMD
+
+## Foreign National Rights & Entitlements
+
+Foreign nationals without RA citizenship but who have worked in Armenia and paid taxes (with or without residency) have the right to receive state benefits the same as that of citizens. Stateless persons and those with refugee status are also entitled to all of this.
+
+### State Benefits for Foreign Nationals
+
+Foreign nationals who have worked and paid taxes in Armenia are entitled to:
+
+*   **Pension**
+*   **Family benefits**
+*   **One-off financial assistance**
+*   **Lump sum for the birth of a child**
+*   **Benefits to the family of the deceased**, or to persons awarded the Armenian National Hero military orders cross
+
+### Rights
+
+A foreign national has the right to:
+*   Own and rent property
+*   Work
+*   Engage in business activities
+
+### Responsibilities
+
+It is the responsibility of foreign nationals to:
+*   Pay taxes and state duties
+*   Pay any other payments specified by the law
+*   Respect the country's Constitution, laws and regulations
+
+All legal protections are extended to foreigners as well.
+
+### Restrictions
+
+What a foreign citizen has **NO right to**:
+*   Entering the country without a visa (unless otherwise stated)
+*   Running for governing positions
+*   Participating in referendums
+*   Working in public services
+*   Creating political parties or becoming an official member
+*   Owning land
+
 ## Military Service
-*   **Compulsory**: Males 18-27 (and recently 27-37 for new citizens) must serve 2 years.
-*   **Dual Citizens**: Subject to service unless they served 12+ months in another country's armed forces (or 18 months alternative service) before naturalization.
-*   **Exemptions**: Health issues, family circumstances (sole son of fallen soldier), or humanitarian reasons.
+
+All males between the age of 18 and 27 in Armenia who are deemed fit for military service must serve for a term of 2 years. There are two military call orders each year, from April to June and from October to December. When called for service, males must report to the police station where they have been registered.
+
+### Dual Citizens & Those Who Renounced Citizenship
+
+Compulsory military service applies to dual citizens as well as those who have renounced their citizenship after January 1, 1995. 
+
+A citizen may be exempt from compulsory military service if:
+
+1. The citizen is deemed unfit for military service due to health conditions;
+2. Prior to naturalization in Armenia, the citizen has served not less than 12 months in the armed forces of another state or has served alternative military service not less than 18 months in another state;
+3. The citizen, whose parent or sibling lost their life during the defense of the Republic of Armenia or during the performance of their military duties in the armed forces, and he is the only male child of the family.
+
+*Reference: "The law on military service and the status of a serviceman", Article 26*
+
+### Exemptions & Postponements
+
+*   **Exemptions**: Generally available for those who have serious health issues or for humanitarian reasons.
+*   **Postponements**: May be provided for educational reasons (see Article 22 of the "Law on Military Service and the Status of a Serviceman").
+*   **Amnesty**: Those who fled service until May 2011 will not be facing criminal prosecution should they carry out mandatory penalty payments as specified by the law.
+
+<Note>
+**Important Update**: On February 12, 2024, amendments to the RA Law "On Military Service and the Status of a Serviceman" came into force, according to which male citizens aged 27 to 37 years old who have received RA citizenship are subject to compulsory military service.
+</Note>
+
+### Military Service Registration
+
+Males subject to military service can register on the [Ministry of Defense website](http://www.mil.am) in Armenia, or at the embassies and consular offices of Armenia in foreign countries. In all cases, the applicant fills an application in Armenian, without corrections. All documents in foreign languages must be translated into Armenian and must have notary authentication.
+
+**RA Ministry of Defense**
+*   **Address**: Bagrevand 5, Yerevan
+*   **Phone**: +374-12-210000
+*   **Website**: [mil.am](http://www.mil.am)
 
 ## Apostille
-Foreign documents used in Armenia (and vice versa) often need an **Apostille** stamp (Hague Convention).
-*   **Issued by**: Ministry of Justice (Registry Offices).
-*   **Cost**: 7,000 AMD (2-5 days) or higher for expedited service.
+
+An apostille stamp legally confirms the position, signature, seal and stamp on official documents. Introduced in the Hague Convention of 1961, it authenticates documents for use in foreign countries.
+
+### Which Documents Require Apostille?
+
+Apostilles are required for:
+
+*   Documents issued by notary offices, including certificate of inheritance
+*   Documents issued by the RA registrar (birth, death, marital status certificates)
+*   Documents issued by courts and their service departments (enforcement orders, judgements, court decisions and sentences)
+*   Documents certified and issued by other state bodies
+
+**Not apostilled:**
+*   Documents from consular and diplomatic agents
+*   Documents for commercial practices
+
+### How Apostilles Are Applied
+
+The apostille stamp is placed directly on documents such as certificates, diplomas, university degrees or court orders, but on a separate sheet attached in the case of documents about civil status. It will contain a headline and content in the language of the country it will be used in.
+
+### Getting an Apostille in Armenia
+
+Apostilles are issued by the **Registry Offices of the Ministry of Justice** in Armenia. 
+
+**Requirements:**
+*   Application
+*   Original and a copy of the documents requiring the apostille
+*   Receipt of payment: **7,000 AMD** to state account number **900005163523**
+
+**Timeline:**
+*   **Standard**: 2-5 working days (delays up to 15 days may occur, but you will receive a notice with reasons)
+*   **Expedited**: For applications received before 13:00, combined with extra payment (additional 8,000 AMD for a total of **15,000 AMD**), you may receive your apostilled document back the following morning from 10 AM
+
+Anyone can apply for an apostille.
+
+### Apostille vs. Consular Legalization
+
+In theory, consular legalization and apostilles are equal in strength. However, consular legalization is more complex, requiring translations and notary signatures before further certification by state bodies.
+
+### Foreign Documents for Use in Armenia
+
+Foreign documents that are to be used in Armenia must be legalized in the country of their origins, then legalized by the Ministry of Foreign Affairs in Armenia, or such other authorities.
