--- a/content/work-finance/employment.mdx
+++ b/content/work-finance/employment.mdx
@@ -8,10 +8,24 @@ description: Finding a job, work permits, and labor rights
 Finding a job is a top priority for most repatriates.
 
 ## Job Search Resources
-*   **Repat Armenia Careers**: Quality jobs with reasonable pay (>$500).
+*   **Repat Armenia Careers**: Quality jobs with reasonable pay (>$500). Most positions start from 150,000-200,000 AMD.
 *   **Facebook Groups**: *Jobs for Repats and Expats in Armenia*, *HR.AM CLUB*, *Գործ Կա*.
-*   **Job Sites**: `staff.am`, `careercenter.am`, `jobfinder.am`, `hire.am`, `job.am`.
+*   **Job Sites**: `staff.am`, `careercenter.am`, `jobfinder.am`, `hire.am`, `job.am`, `professionals.am`, `hr.am`, `rezume.am`, `jobs.am`, `myjob.am`, `iJob.am`, `worknet.am`, `job.banks.am`, `accountant.am`.
+*   **Company Websites**: We highly recommend checking specific company sites who might not use these aggregators and instead pick up applicants directly. These often include embassies, the UN branches, and some international organizations.
+*   **Job Fairs**: Occur throughout the year, but you need to stand out among hundreds of applicants. Make sure your resume is up to par and you dress to impress.
 *   **Networking**: Crucial in Armenia. Talk to people and attend events. The more people you meet, the easier your integration process will be.
+
+<Warning>
+**Employment Agencies**: There are multiple employment agencies that you pay to find you a job. Be careful with whom you deal as not every organization has your best interest at heart. Most will take a small registration fee (1,000-3,000 AMD) and later ask for 25-50% of your first salary. This is in line with how many service providers work in Armenia. If you are expected to pay more than the nominal fee, we recommend walking away. Also, try to negotiate if you can.
+</Warning>
+
+## Employment Rights' Protection Office
+
+There is an NGO that provides free seminars in Armenian on employment rights. If you feel something is not right in the workplace and need free legal assistance, contact:
+
+**Employment Rights' Protection Office**
+*   Address: 22 Hanrapetutyan St., Yerevan 0010
+*   Phone: 041 18 90 03, 096 996604
 
 ## Application Tips
 When applying for a job, please follow these instructions:
@@ -26,23 +40,163 @@ Do active networking with repatriates and locals because it will help you to be 
 
 ## Salaries
 *   **Minimum Wage**: 75,000 AMD.
-*   **Typical Range**: 150,000 - 300,000 AMD.
+*   **Typical Range**: 180,000 - 400,000 AMD. Over the past ten years, the average wage has increased exponentially.
 *   **Average**: ~297,624 AMD (as of June 2025).
+
+### Compensation Rates
+
+Higher rates of compensation can be expected for:
+*   **Overtime**: 50% premium (150% total pay)
+*   **Night shift** (10pm-6am): 30% premium
+*   **Public holidays**: 100% premium or day off
+*   **Hard/dangerous labor**: 30% premium
+
+### Net vs Gross Salaries
+
+The average person, when applying to a position, will talk in Net salaries vs Gross, unless it's an international organization. You will also talk about monthly salaries vs annual.
 
 ## Support
 In the Employment in Armenia section, you will find more about the sector in Armenia, how to protect your rights, where to apply for a job, and how to go about setting up your career. Repat Armenia offers career counseling as well as resume writing assistance. Do not hesitate to contact our Case Manager at `repatriation@repatarmenia.org`.
 
+## Citizen/Resident vs Foreign Worker
+
+As a citizen or resident, it is recommended to apply for your social security number as soon as you obtain your residential registration (grantsoum). You will need this as well as a Social Security Number (SSN) to be legally hired to work. Foreign workers will generally not have an SSN and thus technically would be impossible to register them. A contract thus serves as enough protection, just in case. Make sure a work permit has been obtained, unless you're eligible for an exemption.
+
 ## Work Permits
-As of 2019, foreigners (non-citizens/non-residents) need a work permit.
+
+As of January 1, 2019, foreigners (non-citizens/non-residents) need a work permit. Work permits must be obtained **before** the company may hire the foreign worker.
+
 *   **Who applies**: The employer applies on the [Work Permit website](https://workpermit.am).
-*   **Exemptions**: Highly skilled specialists in IT/finance/etc., business owners, professors, refugees.
 *   **Cost**: 25,000 AMD (permit) + 105,000 AMD (residency).
 
+### Exemptions
+
+The following are exempt from work permit requirements:
+
+*   Permanent or temporary residency holders
+*   Founders or representatives of foreign investment
+*   Specialists for training or installation of machinery
+*   Highly qualified specialists in government-mandated sectors: agriculture, natural sciences, IT, finance, food technology, or management
+*   Family of diplomatic staff
+*   University lecturers
+*   Accredited foreign media representatives
+*   Refugees
+*   Students in accepted exchange programs
+*   Workers employed by non-Armenian employers
+*   Foreigners working in border regions
+*   Those arriving due to international agreements
+
+For highly skilled specialists, business owners, and executives, work permits may not be necessary. Transferred staff (skilled or not) need a permit and temporary residence permit where necessary.
+
+**Note**: There are no distinctions between permits for intra-company transfers, local hires, or subcontracting employment. Permits are fixed term and renewable on request.
+
+### Penalties
+
+*   **Failure to obtain work permit**: Fine up to 150,000 AMD
+*   **Failure to employ after obtaining permit**: Employer must pay all travel expenses, transportation, and living expenses for the foreigner
+
+## Employment Agreements
+
+An Employment Agreement can be for a **fixed term** or **indefinite term**, with most positions using the latter.
+
+<Warning>
+We recommend that you have a clearly defined contract available from the first day of work. Ensure all the details are correctly outlined. However, even if this does not exist, you have the right to protect yourself by suing your employer, so long as you have documentation, witnesses, or other means of proof that you were indeed employed. This will be much harder.
+</Warning>
+
+### Fixed-Term Contracts
+
+Fixed-term employment agreements are only permitted for:
+*   Seasonal work
+*   Temporary jobs of up to two months
+*   Part-time positions
+*   Homecare services (repairs and cleaning)
+*   Replacing a temporarily absent employee
+*   Hiring a foreign worker for a certain duration
+*   Hiring an employee at the age of retirement
+
+All other positions should use indefinite-term contracts.
+
+## Intergovernmental Labor Agreements
+
+Armenia has **free movement of labor agreements** with several countries. Under these agreements, each party recognizes the other's diplomas, certificates, and qualification certificates (provided with certified translations).
+
+**Countries with bilateral labor agreements:**
+*   Russia
+*   Ukraine
+*   Turkmenistan
+*   Georgia
+*   Qatar
+
+If you hold qualifications from these countries, they will be recognized in Armenia (and vice versa), though you may need to provide certified translations and potentially other supporting documents for employment purposes.
+
 ## Labor Rights
-*   **Work Week**: Standard 40 hours (5 days). Max 12h/day (with exceptions).
-*   **Overtime**: Max 4h every 2 days. Paid at 150%.
-*   **Contracts**: Mandatory. Must include salary, hours, vacation (28 days), and terms.
-*   **Termination**: Notice periods apply (usually 30 days for employer, 10-30 for employee).
+
+### Work Week and Hours
+*   **Standard Work Week**: 40 hours (5 days, Monday to Friday). Max 12h/day (with exceptions).
+*   **Alternative**: Employer can opt for 6-day work week with Sundays normally off.
+*   **Special Institutions**: Educational and medical institutions, and energy suppliers may have different schedules.
+*   **24-hour Shifts**: Few jobs are allowed to hire for 24h shifts. Must provide minimum of 48h rest afterward (1 day work, 2 days off).
+
+### Overtime
+*   **Conditions**: Only allowed in emergency situations.
+*   **Limits**: Max 4h a day every 2 days, maximum 180h in a year OR 48h in a given week.
+*   **Pay**: 150% (base + 50% premium).
+
+###Contracts
+*   **Format**: Available in two copies (one for employer, one for employee). Must comply with all labor laws.
+*   **Amendments**: Changes to your nature of work require an amendment to the contract.
+*   **Registration**: All employees must be registered electronically no later than the first day of work.
+*   **Required**: Must include salary, hours, vacation (28 days), and terms.
+
+### Termination
+*   **Notice periods**: See detailed termination section below.
+
+### Daily Rest and Meal Times
+
+During the work day, you must be given time to rest and eat, as well as uninterrupted rest between shifts.
+
+*   **Rest/Meal Breaks**: Between 30 minutes and 2 hours, provided no later than 4 hours after starting your shift.
+*   **Short Shifts**: If your working day does not exceed 6 hours, rest or meal time may not be provided.
+
+### Rest Between Shifts
+*   **Standard**: Minimum 11 hours between shifts.
+*   **Under 18**: Minimum 14 hours between shifts.
+*   **12h/day workers**: Must receive 2 rest days.
+*   **24h shifts**: Require 2 rest days between shifts.
+
+### Weekly Rest Days
+*   **Official Rest**: Sundays are official rest days.
+*   **5-Day Week**: Both Saturday and Sunday are typically non-working days.
+*   **Overtime on Days Off**: If asked to work a full 8-hour shift on your official days off, you have the right to request time off during the next week or have it added to your annual vacation days.
+
+### Annual Leave
+
+*   **Duration**: 28 paid days per year (employer pays for full leave period).
+*   **Payment**: Annual leave salaries must be paid **3 days in advance**.
+*   **Usage**: Should be taken in the given year, either in parts or as a whole.
+*   **Carryover**: If taken in parts and not fully used, the employer may decide to move the remainder to next year.
+*   **Upon Termination**: If leave is not fully taken, the employer is required to reimburse you upon leaving the job.
+
+### Wage Regulations
+
+*   **Equal Pay**: According to the law, all should be paid the same wage, irrespective of sex.
+*   **Currency**: All wages should be paid in AMD; any other currencies are considered illegal for this process.
+*   **Bonuses**: Any bonuses, supplementary pays, etc., should be on top of the minimum wage.
+*   **Rest Day Pay**: Pay for work on rest days is legally expected to equal double the average daily wage.
+*   **Payment Timing**: All wages are paid at least once a month, by the 15th of the following month.
+*   **Late Payment**: Late wages are penalized by a 0.15% daily interest rate.
+*   **Advance Payments**: Allowed by law.
+
+## Required Documents for Work
+
+When starting employment in Armenia, you will need to present the following documents:
+
+*   **ID card**
+*   **Social security card**
+*   **Proof of educational certification** (if requested by employer)
+*   **Proof of health condition** (if requested by employer)
+*   **Consent letter by one parent** if the individual is below the age of 17
+*   **Other legal documents** (if requested by employer)
 
 ## Taxes and Deductions
 Approx. **28%** of gross salary is withheld:
@@ -51,14 +205,221 @@ Approx. **28%** of gross salary is withheld:
 3.  **Military Insurance**: 1,500 - 15,000 AMD depending on salary bracket.
 
 ## Sick Leave
-*   **Benefit**: Paid from the 6th day of incapacity (employer pays days 2-5).
-*   **Calculation**: 80% of average monthly earnings.
-*   **Caregivers**: Up to 7 days paid leave to care for sick family members (longer for children).
+
+Each individual is entitled to employment protection when incapacitated by illness. **Foreign citizens and stateless persons have the right to sick leave benefits on an equal basis with Armenian citizens** when making equal social payments.
+
+### Eligibility and Protection
+
+Multiple laws ensure the workplace allows time to recuperate before returning to work. Once you submit the necessary documents (a temporary incapacity certificate, called a "bulletin" in Armenia, issued by a medical institution), the benefits are calculated into the following month's salary. 
+
+The benefit accounts for working days taken for temporary disability (attested by a doctor's note) for **up to three months** before the employer has the right to dismiss you from work.
+
+### Benefit Calculation
+
+Sick leave benefit is calculated as follows:
+
+1.  **Base Amount**: 80% of your insured average monthly earnings in the **last 12 months** before incapacity began (or total period of covered employment if less than 12 months).
+2.  **Daily Rate**: Divide by **21** (or **25** for a six-day work week).
+3.  **Payment Period**: Paid from the **6th day** of incapacity for up to **six months**.
+
+**Important**: The first day is not paid. The employer pays for the 2nd through 5th days; government sick leave benefits start from the 6th day.
+
+If temporary disability exceeds 3 months, a special examination is required. Contact the Ministry of Labor and Social Affairs for details.
+
+### Caregiver Leave Benefits
+
+**Caring for Sick Adults:**
+*   Employees may be entitled to government assistance for up to **7 days**, starting from the **second day**.
+
+**Caring for Sick Children:**
+*   **Standard**: No more than 24 hours of paid leave.
+*   **Contagious Illness**: The caregiver may apply for up to **28 days** of care assistance.
+*   **Hospitalization**: Assistance applies for all working days the child spends in the medical facility.
+*   **Child with Disability**: A caregiver may apply for assistance **once each calendar year**, for the time allotted on the medical document they obtain.
+
+### Self-Employed Sick Leave
+
+The self-employed are also eligible for sick leave pay from the government:
+*   **Eligibility**: For the time you receive **in-patient care** at a medical institution.
+*   **Duration**: No longer than **60 calendar days** in a given year.
+*   **Calculation**: Average monthly salary ÷ 30.4 (average calendar days per month) × number of calendar days of temporary disability.
+*   **Documentation**: Income statement issued by the tax authority is required.
+
+**Note**: A temporary incapacity certificate issued by a foreign medical institution is also accepted as a basis for sick leave benefits in Armenia.
+
+### Sick Leave Assistance (Government Hospitalization Program)
+
+For longer periods requiring hospitalization, government assistance is available:
+
+*   **Employed Persons**: A temporary unemployment document from your workplace suffices to ensure government assistance, for no longer than **60 days per year**. The amount is paid directly to the hospital.
+*   **Contact**: For more information, call **060654013**.
+*   **Self-Employed**: Must provide an income statement issued by the tax authority.
+
+Normally, sick leave is covered by the employer for short periods. The government assistance program is specifically for extended hospitalizations.
 
 ## Freelancing
-*   **Registration**: Recommended to register as a **Sole Entrepreneur** (PE).
+
+Many repatriates and locals turn to freelancing to supplement their incomes, and sometimes freelance work becomes the main source of income. Freelancing is an underdeveloped field in Armenia that will see more taxation over the coming years.
+
+*   **Registration**: You must register as a **Sole Entrepreneur (PE)** to legally run your freelance business. At the moment, most do not register, but proper registration is strongly recommended.
 *   **Tax Benefits**: IT certificate holders can get 10% income tax and 0% VAT for exported services.
 *   **Turnover Tax**: 5% for revenue under 115 million AMD (check current thresholds).
 
-## Coworking Spaces
-Popular spots: *The Loft*, *Impact Hub*, *Aeon*, *Mirzoyan Library*, *256 Hub*.
+See the [Taxes section](/work-finance/taxes) for more detailed information about tax advantages for freelancers.
+
+## Volunteer Work
+
+On June 14, 2023, the National Assembly of Armenia adopted the new law "On Volunteer Work" developed by the Ministry of Labor and Social Affairs. 
+
+According to the law, only a person that has signed a volunteer work agreement with the organization can be considered a volunteer. Moreover, the provisions set out that in case of voluntary work that is performed without an agreement, this work is considered illegal, and the organization can be subject to fines.
+
+<Note>
+**Important**: Always ensure you have a signed volunteer work agreement before starting any volunteer position in Armenia to protect both yourself and the organization.
+</Note>
+
+## Cafes, Anti-Cafes, and Coworking Spaces
+
+Armenia has numerous coworking spaces and cafes that offer unlimited internet and a productive environment, similar to the appeal of a Starbucks in most Western countries. They provide the perfect setting to work while enjoying delicious coffee.
+
+Popular spaces include:
+- **Achajour Cafe**
+- **Mirzoyan Library**
+- **The Loft Coworking Space**
+- **Aeon**
+- **Library Anticafe**
+- **Impact Hub Coworking Space**
+- **Hero House Coworking Space**
+- **256 Hub**
+- **BŪRO work'n'roll**
+- **cowo.academy**
+- **ReCoworking Armenia**
+- **Fabula Coworking**
+
+<Note>
+New coworking spaces are constantly opening. Check online resources for the most current list of available spaces.
+</Note>
+
+## Termination of Employment
+
+Leaving your place of work can happen in two main ways: the decision of the employee or that of the employer. Both parties can come to a mutual agreement as well, or face the end of a contract term.
+
+### State Guarantees and Protections
+
+**No one can be terminated based on:**
+- Illness
+- Work-related injuries  
+- Pregnancy or caring for children up to three years of age
+
+These are state guarantees, whether included in the contract or not.
+
+### Termination Process
+
+The party that receives the offer for termination has **7 days to accept or reject it**. If no action is taken, it's considered rejected. Termination of employment should be documented as an agreement with the conditions defined—compensation, end date, etc.
+
+### Notice Periods
+
+#### Fixed-Term Contracts
+- **Minimum 10 days' notice** before the date specified in the contract
+- If the employee doesn't show up the day after the final date, employment is considered terminated
+- If the employee does show up, the contract automatically converts to an indefinite-term agreement
+
+#### Indefinite-Term Contracts  
+- **30-day notice** from employer to terminate
+- **5-day notice** sufficient when employee's situation makes return impossible, or if agreement is violated
+
+#### Special Circumstances
+- **3-day cooling-off period**: Either party can withdraw a termination notice
+- **3-day notice** required during probationary period
+- **2-month notice** required for mass layoffs (more than 10 employees or more than 20% of workforce)
+
+### Termination Without Notice or Compensation
+
+In the following cases, an employee can be fired without notice or compensation:
+
+- Regular failure to perform duties without valid reason (having already received at least two disciplinary measures)
+- Employer's loss of confidence due to damage caused or similar circumstances
+- Working under the influence of drugs or alcohol
+- Absence for a full day without valid reason
+- Refusal to undergo mandatory medical examinations
+
+### Automatic Termination Reasons
+
+Employment automatically ends when:
+- Employee dies
+- Employee is incarcerated
+- Employee is conscripted
+- Misrepresentation at time of hire
+
+### Termination Restrictions
+
+Employment **cannot be terminated** while an employee is:
+- On leave
+- Pregnant
+- On strike
+
+Outside of the conditions already outlined, the only way employment can be terminated would be if another position was offered in its stead but rejected.
+
+### Severance Pay
+
+Severance pay and notice periods depend on the legal basis for termination and length of employment.
+
+#### Company Dissolution
+
+| Advance Notice | Severance Pay |
+| :--- | :--- |
+| Two months | One month's wages |
+
+#### Other Legal Grounds
+
+The following situations have variable notice periods and severance based on employment duration:
+
+**Legal grounds include:**
+- **Production necessity**: Urgent and unpredictable circumstances, or changes in volumes of production, economic conditions, technological conditions, or labor organization
+- **Employee doesn't meet requirements**: Due to health issues or incompetence
+- **Long-term disability**: 120 consecutive days or 140 days in a year
+- **Retirement age**: Employee reaching 63 or 65 years (if provided by employment agreement)
+
+| Employment Duration | Advance Notice | Severance Pay |
+| :--- | :--- | :--- |
+| Less than 1 year | 14 days | 10 days' wages |
+| One to five years | 35 days | 25 days' wages |
+| Five to ten years | 42 days | 30 days' wages |
+| Ten to fifteen years | 49 days | 35 days' wages |
+| More than fifteen years | 69 days | 44 days' wages |
+
+### Disputes and Legal Recourse
+
+#### Statute of Limitations
+- **3-year statute** for most disputes
+- **No time limit** for claims regarding:
+  - Unpaid wages
+  - Protection of honor and dignity
+  - Compensation for wrongful death and injury
+- **2-month period** to challenge termination
+- **1-year statute** for claims that employment qualifies as actual employment
+
+<Note>
+For more information on law enforcement, penalties, discrimination, disputes, and discipline, consult with [Vardanyan & Partners Law Firm](https://www.vardanyanpartners.am/) or similar legal professionals.
+</Note>
+
+## Household Helpers
+
+Household helpers are quite common in Armenia, with many groups dedicated to finding just the right people. These include both temporary and permanent helpers who work as:
+
+*   **Housekeepers** (*tnayin aghakatar*)
+*   **Nannies** (*dayaks*) - most common
+*   **Drivers**
+*   **Cleaners**
+*   **Gardeners**
+
+### Nannies (Dayaks)
+
+Nannies are especially common for families where both parents work. They are often hired early on, sometimes when the child is only a few months old. Many helpers work informally, so it's important to discuss terms, schedule, and payment clearly upfront.
+
+### Finding Household Help
+
+*   **Facebook Groups**: Many groups are dedicated to connecting families with household helpers.
+*   **Word of Mouth**: Ask friends, colleagues, and neighbors for recommendations.
+*   **Local Networks**: Repat and expat communities often share trusted contacts.
+
+**Note**: While household help is affordable and accessible, ensure you clarify all employment terms, including hours, duties, payment schedule, and any legal requirements if hiring formally.
