--- a/content/work-finance/financials.mdx
+++ b/content/work-finance/financials.mdx
@@ -13,8 +13,29 @@ Moving your financial assets to Armenia is relatively straightforward:
 1.  **Cash**: You can bring up to **$10,000** (or equivalent) without declaration. Amounts over $10,000 must be declared at customs.
     *   *Note: Import and export of local currency is prohibited.*
 2.  **Bank Transfer**: For amounts over $10,000, International SWIFT transfers are recommended.
-3.  **Money Transfer Services**: Fast transfers via MoneyGram, Unistream, Best, Moneytun (USA-Armenia-USA), Intelexpress, Converse Transfer (Russia-Armenia-Russia), and RIA.
+3.  **Money Transfer Services**: 
+    *   **Physical presence methods**: RIA, MoneyGram, Unistream
+    *   **MoneyTun**: Armenian version of FirmPay with cash pickups, credit to accounts (particularly at AraratBank, ArdshinBank, UniBank, and IDBank), and home delivery services
+    *   **Other services**: Best, Intelexpress, Converse Transfer (Russia-Armenia-Russia)
 4.  **Online**: Some banks allow opening accounts online.
+
+## Receiving Payments for Freelancers
+
+Many in Armenia work online and receive payments through various platforms. Since **PayPal doesn't allow for the receipt of money in Armenia**, repatriates use alternative methods:
+
+**Online Payment Platforms:**
+*   **Skrill**
+*   **Payoneer**
+*   **Xoom** (powered by PayPal)
+*   **Paysend**
+*   **TransferWise** (US or EU for a card)
+*   **Canada Stack Mastercard**
+*   **WorldRemit**
+*   **Remitly**
+
+*Note: Western Union used to work in Armenia, but it seems to have temporarily disappeared.*
+
+Many freelancers also opt for international wire transfers as an alternative.
 
 ## Banks in Armenia
 There are 18 banks that operate in Armenia. Some are locally owned, some are subsidiaries of international banks. All have competitive advantages, so it's best to shop around for each product offered. While some offer higher interest rates on deposits, others have better terms for mortgage loans or the transferring of large amounts from abroad.
