--- a/content/work-finance/taxes.mdx
+++ b/content/work-finance/taxes.mdx
@@ -14,6 +14,33 @@ Understanding the tax system is crucial for compliance and financial planning.
     *   10% for salaries above 500,000 AMD (capped at 25,000 AMD max contribution).
 *   **Military Insurance**: 1,500 - 15,000 AMD/month depending on salary.
 
+<Note>
+**Future Changes**: The PIT is expected to drop to 18% over the next few years, however a tax going to universal health insurance may be introduced in the future. Always do your research and keep up to date.
+</Note>
+
+## Freelancer Taxes
+
+While you might have heard that freelancers do not pay taxes, there is strong advice to properly organize the legal and taxation side of your freelance activity.
+
+### IT Professionals
+By acquiring a certificate in the IT field, a developer can take advantage of:
+*   **10% income tax rate** (instead of 20%)
+*   **Zero VAT rate** for export of services
+
+**Benefits include:**
+*   Legal business status
+*   International recognition
+*   Pension savings
+*   Lower costs by using bank accounts instead of money transfer systems
+
+### Fixed Payment Mode
+Trainers of various narrow-profile courses, heads of dance clubs, craftsmen, and other self-employed people have the opportunity to use the **fixed payment mode**, which is paid once a quarter instead of regular tax payments.
+
+### Licensing Requirements
+Freelancers can easily, quickly, and affordably legalize their business by receiving a license corresponding to their occupation, **provided that their annual revenue does not exceed 9 million drams**.
+
+For more information, please refer to the **RA Law on tax privileges for self-employed persons**.
+
 ## Business Taxes
 You must choose a tax regime within **20 days** of registration.
 
